Make backoff calculation configurable
(cherry picked from commit 0d45f77a1794f13974a6ddbc2f6e85a440b08dc3)
Signed-off-by: Tomas Longo <tomas.longo@sap.com>